--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -4,10 +4,10 @@
 
 #app-root-2023-wcp .app {
   font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: auto auto;
+  margin: 40px auto;
   max-width: 1350px;
   width: 100%;
-  h2 {
+  h3 {
     background-color: @unblue;
     color: #fff;
     font-size: 26px;
@@ -20,18 +20,18 @@
     display: flex;
     flex-flow: row wrap;
     margin: auto auto;
-    max-width: 900px;
+    max-width: 700px;
     .indicator_container {
       box-sizing: border-box;
-      flex: 50%;
+      flex: 100%;
       margin-bottom: 20px;
-      &:nth-child(2n) {
-        padding-left: 20px;
-      }
-      &:nth-child(2n - 1) {
-        padding-right: 20px;
-      }
-      h3 {
+      // &:nth-child(2n) {
+      //   padding-left: 20px;
+      // }
+      // &:nth-child(2n - 1) {
+      //   padding-right: 20px;
+      // }
+      h4 {
         border-bottom: 1px solid rgba(170, 160, 150, 0.5);
         color: #000;
         font-size: 22px;
@@ -39,33 +39,27 @@
         margin: auto auto 20px auto;
         padding: 5px 0;
       }
+      p {
+        max-width: 650px;
+        margin: auto auto 20px auto;
+      }
       .indicator_list {
+        display: flex;
         list-style: none;
-        margin: 0;
+        margin: 0 0 20px 0;
         padding: 0;
         li {
+          align-items: center;
+          flex: 50%;
+          font-weight: 600;
           margin-bottom: 10px;
-          &:after {
-            padding-bottom: 10px;
-            border-bottom: 1px dashed rgba(170, 160, 150, 0.8);
-            opacity: 0.5;
-            content: '';
-            height: 1px;
-            width: 50%;
-            display: block;
-          }
-          &:last-child {
-            &:after {
-              display: none;
-            }
-          }
+          text-align: center;
           .value {
             display: block;
-            margin-bottom: 5px;
             font-size: 20px;
             font-weight: 600;
+            margin-bottom: 5px;
             .number {
-              background-color: @unblue;
               border-radius: 20px;
               color: #fff;
               display: inline-block;
@@ -73,6 +67,15 @@
               line-height: 40px;
               text-align: center;
               width: 40px;
+              &.high {
+                background-color: @unblue;
+              }
+              &.medium {
+                background-color: @unorange;
+              }
+              &.low {
+                background-color: @unred;
+              }
             }
           }
         }
