--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -51,6 +51,7 @@
           align-items: center;
           box-sizing: border-box;
           flex: 50%;
+          font-size: 14px;
           font-weight: 600;
           margin-bottom: 10px;
           padding: 0 10px;
