--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -15,6 +15,7 @@
     .indicator_container {
       box-sizing: border-box;
       flex: 100%;
+      min-width: 120px;
       margin-bottom: 20px;
       // &:nth-child(2n) {
       //   padding-left: 20px;
@@ -44,13 +45,16 @@
       }
       .indicator_list {
         display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
         list-style: none;
         margin: 0 0 20px 0;
         padding: 0;
         li {
           align-items: center;
           box-sizing: border-box;
-          flex: 50%;
+          flex: 1 1 120px;
+          max-width: 120px;
           font-size: 14px;
           font-weight: 600;
           margin-bottom: 10px;
