--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -7,7 +7,7 @@
   margin: 40px auto;
   max-width: 1350px;
   width: 100%;
-  .container {
+  .content_container {
     display: flex;
     flex-flow: row wrap;
     margin: auto auto;
